css/main.css
html {
  box-sizing: border-box;
  font: normal 100%/1.5 sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

div {
  padding: .5rem;
  text-align: center;
}

.btn {
  display: inline-block;
  background-color: #333;
  font-size: 1rem;
  color: #fff;
  padding: 0.4em  0.75em 0.3em;
  border-radius: 8px;
  border-width: 3px;
  text-decoration: none;
}

.btn-subtle {
  background-color: #ccc;
  color:#fff;
}

.btn-ghost {
  background-color: #fff;
  color:#000;
  border: 3px solid;
  border-color: #000;
}

.btn-warning {
  background-color: #f33;
  color:#fff;
}

.btn-small {
  font-size: 0.875rem;
}

.btn-big {
  font-size: 1.5rem;
}

.btn:hover {
  background-color: #000;
}

.btn-subtle:hover {
  background-color: #666;
}

.btn-ghost:hover {
  background-color: #666;
  border-color: #666;
}

.btn-warning:hover {
  background-color: #933;
}

